# nhf-spatial-targets

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  agg_all.slurm  agg_daymet.slurm  agg_snodas.slurm  agg_ssebop.slurm  environment.yml  fetch_all.slurm  fetch_era5_land.slurm  fetch_margulis_wus_sr.slurm  fetch_snodas.slurm  inspect_aggregated.slurm  inspect_consolidated.slurm  pixi.toml  pyproject.toml  run_all.slurm
.claude/: settings.json  settings.local.json
catalog/: sources.yml  variables.yml
config/: pipeline.yml
docs/: strategy-deck.html
notebooks/: debug_mod16a2_agg.ipynb  extract_geofabric.ipynb  inspect_consolidated.ipynb  inspect_consolidated_aet.ipynb  inspect_consolidated_recharge.ipynb  inspect_consolidated_runoff.ipynb  inspect_consolidated_snow_covered_area.ipynb  inspect_consolidated_soil_moisture.ipynb  inspect_fabric_batches.ipynb  inspect_margulis_wus_sr.ipynb  inspect_snodas.ipynb  visualize_era5_land.ipynb  visualize_gldas.ipynb  visualize_merra2.ipynb  visualize_mod10c1.ipynb  visualize_mod16a2.ipynb  visualize_ncep_ncar.ipynb  visualize_nldas_mosaic.ipynb  visualize_nldas_noah.ipynb  visualize_reitz2017.ipynb  visualize_ssebop_aet.ipynb  visualize_watergap22d.ipynb
scripts/: render_figures.py
tests/: conftest.py  test_aggregate_coords.py  test_aggregate_daymet.py  test_aggregate_driver.py  test_aggregate_driver_per_year.py  test_aggregate_era5_land.py  test_aggregate_gldas.py  test_aggregate_integration.py  test_aggregate_margulis_wus_sr.py  test_aggregate_merra2.py  test_aggregate_mod10c1.py  test_auth.py  (+53 more)
(+165 files in other folders)
